--- a/render.yaml
+++ b/render.yaml
@@ -12,9 +12,7 @@ services:
       - key: SECRET_KEY
         value: your_secret_key_here_change_me_in_production
       - key: DATABASE_URL
-        fromDatabase:
-          name: zalo-mini-app-db
-          property: connectionString
+        value: "" # Will be set manually after Blueprint creates database
 
 databases:
   - name: zalo-mini-app-db
