--- a/backend/app/requirements.txt
+++ b/backend/app/requirements.txt
@@ -1,7 +1,8 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
+fastapi==0.115.0
+uvicorn[standard]==0.30.0
 sqlalchemy==1.4.41
-pydantic==1.10.13
+pydantic==2.5.0
+pydantic-settings==2.1.0
 alembic==1.12.1
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
